# cell

./: Add.h  CMakeLists.txt  Cell.h  CellBox.h  Max.h  Mean.h  Min.h  Monitor.h  Observer.h  README.md  Subject.h  Sum.h  View.h  main.cpp
test/: AddFixture.cpp  CMakeLists.txt  CellBoxFixture.cpp  CellBoxTest.cpp  CellTest.cpp  MaxFixture.cpp  MeanFixture.cpp  MinFixture.cpp  SumFixture.cpp
test/lib/googletest/: CMakeLists.txt  CONTRIBUTING.md  README.md
test/lib/googletest/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  pkgconfig.md  platforms.md  primer.md  quickstart-bazel.md  quickstart-cmake.md  samples.md
test/lib/googletest/docs/reference/: assertions.md  matchers.md  testing.md
test/lib/googletest/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc
test/lib/googletest/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-more-actions_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h
test/lib/googletest/googletest/: CMakeLists.txt  README.md
test/lib/googletest/googletest/samples/: sample10_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
test/lib/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc  gtest_main.cc
test/lib/googletest/googletest/test/: googletest-break-on-failure-unittest_.cc  googletest-death-test-test.cc  googletest-filepath-test.cc  googletest-message-test.cc  googletest-options-test.cc  googletest-port-test.cc  googletest-printers-test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_dirs_test.cc  gtest_unittest.cc  (+6 more)
(+20 files in other folders)
